:memo: 记一次java服务异常(增大了 tomcat 内存)